<resources>
    <string name="app_name">EverisFinancialGoal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_btn_login">LOGIN</string>
    <string name="headLogin">Login</string>
    <string name="userName">usuario</string>
    <string name="password">senha</string>
    <string name="forgotPassword">esqueci minha senha</string>
    <string name="text_btn_abra_sua_conta">ABRA SUA CONTA</string>
    <string name="title_navbar_cadastro">Abra sua conta</string>
    <string name="txt_button_cadastro">CONTINUAR</string>
    <string name="title_fragment_email">Abra sua conta em 2 minutos.</string>
    <string name="subtitle_fragment_email">É gratis!</string>
    <string name="title_edt_fragment_email">Insira seu e-mail para começar.</string>
    <string name="txt_hint_email_cadastro">e-mail</string>
    <string name="title_fragment_nome">Quase lá</string>
    <string name="title_edt_fragment_nome">Defina como devemos chamar você.</string>
    <string name="txt_hint_nome">primeiro nome ou apelido</string>
    <string name="title_fragment_senha">Último passo</string>
    <string name="title_edt_fragment_senha">Crie uma senha segura para acessar sua conta</string>
    <string name="txt_hint_senha">senha</string>
    <string name="txt_btn_senha">CRIAR CONTA</string>
    <string name="txt_subtitle_edt_fragment_senha">por favor cria uma senha com pelo menos 8 dígitos.</string>
    <string name="sub_title_dialog">Insira seu email para enviarmos um link para resetar sua senha.</string>
    <string name="title_dialog">Esqueci a senha</string>
    <string name="hint_email_dialog">e-mail</string>
    <string name="txt_btn_ok_dialog">OK</string>
    <string name="txt_btn_cancelar_dialog">CANCELAR</string>
    <string name="txt_monthly_periodo">Período em meses</string>
    <string name="txt_monthly_taxa">Taxa de juros mensal</string>
    <string name="txt_monthly_val_inicial">Valor da aplicação inicial</string>
    <string name="txt_monthly_val_mensal">Valor de aplicação mensal</string>
    <string name="txt_monthly_val_final">Valor obtido no final</string>
    <string name="btn_montlhy">Calcular</string>
    <string name="nav_bar_monthly">aplicação mensal</string>
    <string name="preiodo_invalido">Insira um valor válido para o período!</string>
    <string name="juros_invalido">Insira um valor válido para o juros!</string>
    <string name="aplic_inicial_invalida">Insira um valor válido para a aplicação inicial!</string>
    <string name="aplic_mensal_invalida">Insira um valor válido para a aplicação mensal!</string>
    <string name="is_valid">Tudo certo</string>
    <string name="erro_dialog_monthly">Verifique os dados!</string>
    <string name="head_yearly">aplicação única</string>
    <string name="txt_hint_aplicação_única_120">120</string>
    <string name="edt_txt_periodo_meses">Período em meses</string>
    <string name="txt_btn_calcular">CALCULAR</string>
    <string name="txt_taxa_de_juros_mensal">Taxa de juros mensal</string>
    <string name="tv_valor_da_aplica_o_nica_hoje">Valor da aplicação única hoje</string>
    <string name="txt_valor_obtido_no_final">Valor obtido no final</string>
    <string name="txt_campo_invalido_periodo_mensal"> Período mensal inválido </string>
    <string name="txt_periodo_text"> O período em meses não pode estar em branco e deve ser maior que 0</string>
    <string name="txt_campo_invalido_taxa"> Taxa inválida </string>
    <string name="txt_taxa_text"> O campo de taxa de juros não pode estar em branco e deve ter valor maior que 0 </string>
    <string name="txt_campo_invalido_valor_aplicacao"> Valor de aplicação inválido </string>
    <string name="txt_valor_text"> O campo de valor da aplicação não pode estar em branco e deve ter um valor maior que 0 </string>
    <string name="txt_periodo_extenso"> Período em meses muito extenso </string>
    <string name="txt_indice_correcao">Indices para correção</string>
    <string name="txt_porcentagem_ano">Porcentagem ao ano</string>
    <string name="txt_porcentagem_CDB">Porcentagem do CDB ao ano</string>
    <string name="txt_valor_final">Valor obtidono final</string>
    <string name="title_nav_index">correção por índice</string>


    <!-- Array spinner - Tela Index -->
    <string-array name="indice_correcao">
        <item>CDB</item>
        <item>LCI</item>
    </string-array>
    <string-array name="lucratividade">
        <item>PRE</item>
        <item>POS</item>
    </string-array>

    <!-- Textos AlertDialog -->
    <string name="email_alert_title">E-mail inválido</string>
    <string name="email_alert_text">forneça um endereço de e-mail válido</string>
    <string name="nameOrNickname_alert_title">Nome/Apelido inválido</string>
    <string name="nameOrNickname_alert_text">O nome/apelido deve ter pelo menos 1 carácter</string>
    <string name="password_alert_title">Senha inválida</string>
    <string name="password_alert_text">a senha deve ter pelo menos 8 dígitos</string>
    <string name="positive_button">OK</string>
    <string name="title_card_calculator">calculadora</string>
    <string name="title_card_simulator">simulador</string>
    <string name="text_card_simulacao">acesse sua última</string>
    <string name="text_title2_card_simulacao">simulacao</string>
    <string name="arrow_simulacao"><![CDATA[>]]></string>
    <string name="tag_dialog">custom dialog</string>
    <string name="dialog_title">Usuário inválido</string>
    <string name="title_navbar_listCalcs">Calculadoras</string>
    <string name="title_card_aplicação_mensal">Investimento com aplicação mensal</string>
    <string name="title_aplicacao_unica">Investimento com aplicação única</string>
    <string name="title_email_sucesso">E-mail enviado!</string>
    <string name="title_correcao_valor">Correção de valor por um índice</string>
    <string name="txt_taxa_mensal">Taxa Mensal:</string>
    <string name="txt_taxa_anual">Taxa Anual:</string>
    <string name="msg_nao_disponivel">Simulador não disponível</string>
    <string name="txt_conversor_de_taxas">conversor de taxas</string>
    <string name="title_valor_final_muito_alto">Erro de API</string>
    <string name="txt_valor_final_muito_alto">Valor retornado da API é NaN ou muito alto</string>

</resources>