<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/backgroundLogin">

    <View
        android:id="@+id/headLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"/>

    <ImageView
        android:id="@+id/btnGoToBack"
        android:layout_width="@dimen/goToBack"
        android:layout_height="@dimen/goToBack"
        android:src="@drawable/ic_back"
        android:layout_marginStart="@dimen/marginGoToBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/headLogin"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textHeadLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headLogin"
        android:textColor="@color/black"
        android:textSize="@dimen/sizeTextHead"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/marginTextLogin"
        app:layout_constraintStart_toEndOf="@id/btnGoToBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/headLogin"
        />
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textBox"
        android:layout_margin="@dimen/marginBox"
        android:hint="@string/userName"
        android:inputType="textEmailAddress"
        android:elevation="@dimen/elevation"
        android:paddingStart="@dimen/paddingText"
        android:background="@drawable/custom_edit_username"
        app:layout_constraintTop_toBottomOf="@+id/headLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textBox"
        android:layout_marginTop="@dimen/topEdit"
        android:layout_marginEnd="@dimen/marginBox"
        android:layout_marginStart="@dimen/marginBox"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:elevation="@dimen/elevation"
        android:paddingStart="@dimen/paddingText"
        android:background="@drawable/custom_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonLogin"
        android:layout_margin="@dimen/marginBox"
        android:text="@string/headLogin"
        android:textSize="@dimen/textButtonSize"
        android:backgroundTint="@color/buttonLogin"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginBox"
        android:text="@string/forgotPassword"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />



</androidx.constraintlayout.widget.ConstraintLayout>