<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.monthly.MonthlyFragment">

    <include
        android:id="@+id/monthly_nav_bar"
        layout="@layout/navbar_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txt_periodo_meses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_monthly_periodo"
        android:textSize="@dimen/text_size_monthly"
        android:layout_marginTop="@dimen/margin_edit"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly_nav_bar" />
    <EditText
        android:id="@+id/edt_periodo_meses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textSize="@dimen/text_size_monthly"
        android:elevation="@dimen/elevation"
        android:background="@drawable/custom_edi_text_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_periodo_meses" />
    <TextView
        android:id="@+id/txt_taxa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_monthly_taxa"
        android:textSize="@dimen/text_size_monthly"
        android:layout_marginTop="@dimen/margin_txt_monthly"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_periodo_meses" />
    <EditText
        android:id="@+id/edt_taxa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textSize="@dimen/text_size_monthly"
        android:elevation="@dimen/elevation"
        android:background="@drawable/custom_edi_text_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_taxa"/>
    <TextView
        android:id="@+id/txt_val_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_monthly_val_inicial"
        android:textSize="@dimen/text_size_monthly"
        android:layout_marginTop="@dimen/margin_txt_monthly"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_taxa" />
    <EditText
        android:id="@+id/edit_val_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textSize="@dimen/text_size_monthly"
        android:elevation="@dimen/elevation"
        android:background="@drawable/custom_edi_text_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_val_init"/>
    <TextView
        android:id="@+id/txt_val_mensal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_monthly_val_mensal"
        android:textSize="@dimen/text_size_monthly"
        android:layout_marginTop="@dimen/margin_txt_monthly"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_val_init" />
    <EditText
        android:id="@+id/edit_val_mensal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textSize="@dimen/text_size_monthly"
        android:elevation="@dimen/elevation"
        android:background="@drawable/custom_edi_text_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_val_mensal"/>
    <TextView
        android:id="@+id/txt_val_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_monthly_val_final"
        android:textSize="@dimen/text_size_monthly"
        android:layout_marginTop="@dimen/margin_txt_monthly"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_val_mensal" />
    <EditText
        android:id="@+id/edit_val_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"
        android:textSize="@dimen/text_size_monthly"
        android:elevation="@dimen/elevation"
        android:background="@drawable/custom_edit_blocked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_val_final"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_montlhy"
        android:fontFamily="@font/roboto"
        android:padding="@dimen/margin_txt_monthly"
        android:layout_marginTop="@dimen/margin_edit"
        android:backgroundTint="@color/dot_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_val_final"
        android:layout_marginStart="@dimen/margin_txt_monthly"
        android:layout_marginEnd="@dimen/margin_txt_monthly"/>

</androidx.constraintlayout.widget.ConstraintLayout>