<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="382dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_constrain_layout"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_home"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icone_home_bell"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_name_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Antonio Coutinho"
            android:layout_marginTop="62dp"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            app:layout_constraintTop_toBottomOf="@+id/icon_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_calculadora"
        android:layout_width="109dp"
        android:layout_height="124dp"
        android:background="@drawable/rounded_card"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card_calculator"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_simulador"
        android:layout_width="109dp"
        android:layout_height="124dp"
        android:background="@drawable/rounded_card"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toEndOf="@+id/card_calculadora"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card_simulator"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/card_simulador"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title1_card_simulacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_card_simulacao"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="13dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title2_card_simulacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title2_card_simulacao"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="13dp"
            app:layout_constraintTop_toBottomOf="@+id/title1_card_simulacao"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/img_arrow_simulacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/positive_button"
            android:text="@string/arrow_simulacao"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@+id/title1_card_simulacao"
            app:layout_constraintStart_toEndOf="@+id/title2_card_simulacao"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/icon_shape"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>